<resources>
    <string name="app_name">Week2Bookkeeping</string>

    <string name="lb_addAccountBanner">新增帳務</string>
    <string name="lb_save">儲存</string>
    <string name="lb_priceHint">price</string>
    <string name="lb_categroyHint">收入/支出 分類選擇</string>
    <string name="lb_categroy">分類</string>
    <string name="lb_item">品名</string>
    <string name="lb_payment">付款方式</string>
    <string name="tx_payment">現金</string>
    <string name="lb_date">日期</string>
    <string name="lb_note">備註</string>


    <string name="iv_desc">icon圖示</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>